--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-infinite-scroll-component": "^6.1.0",
+    "react-lazy-load-image-component": "^1.6.3",
     "react-router-dom": "^7.9.5",
     "react-scripts": "5.0.1",
     "react-top-loading-bar": "^3.0.2",
